--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
             </div>
 
             <!-- Welcome image -->
-            <div class="pic">
-                <img src="img/photo1.jpeg" alt="image" height="400px" width="600px">
-            </div>
+            <img class="pic" src="img/photo1.jpeg" alt="image" width="400px">
         </div>
 
         
@@ -82,11 +80,11 @@
     <!-- Call to action section -->
     <div class="bottom">
         <section class="bluebox">
-            <div>
+            <div class="bluebox-cta">
                 <p id="fat">Call to action! It's time!</p>
                 <p>Sign up for our product by clicking that button right over there!</p>
-            </div>
-            <button type="button">Sign Up</button>
+            </div>                
+                <button type="button">Sign Up</button>
         </section>
     </div>
 
